--- a/Backend/Estore/src/WebApi/Dockerfile
+++ b/Backend/Estore/src/WebApi/Dockerfile
@@ -5,12 +5,15 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["CleanArchitectureSolutionTest/src/WebApi/WebApi.csproj", "WebApi/"]
-COPY ["src/Application/Application.csproj", "src/Application/"]
-COPY ["src/Domain/Domain.csproj", "src/Domain/"]
-COPY ["src/Infrastructure/Infrastructure.csproj", "src/Infrastructure/"]
+COPY ["WebApi/WebApi.csproj", "WebApi/"]
+COPY ["Estore/src/Application/Application.csproj", "src/Application/"]
+COPY ["Estore/src/Domain/Domain.csproj", "src/Domain/"]
+COPY ["Estore/src/Infrastructure/Persistence/Persistence.csproj", "src/Infrastructure/Persistence/"]
 
-RUN dotnet restore "CleanArchitectureSolutionTest/src/WebApi/WebApi.csproj"
+COPY ["Estore/src/Infrastructure/Services/Services.csproj", "src/Infrastructure/Services/"]
+COPY ["Estore/src/SharedKernel/SharedKernel.csproj", "src/SharedKernel/" ]
+
+RUN dotnet restore "Estore/src/WebApi/WebApi.csproj"
 COPY . .
 WORKDIR "/src/WebApi"
 RUN dotnet build "WebApi.csproj" -c Release -o /app/build
